# rag_test_ver1.0

./: README.md  doc_test2.md  main.ipynb  main_test2.ipynb  main_test3.1.py  main_test3.1_analysis.md  main_test3.py  main_test3_analysis.md  main_test5.ipynb  pyproject.toml  test001.ipynb  titanic_report.csv
