[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "docx>=0.2.4",
    "google-genai>=1.24.0",
    "openai>=2.15.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.53.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
